--- a/float-propt.css
+++ b/float-propt.css
@@ -15,7 +15,7 @@
 .aaa{
     height: 200px;
     width: 200px;
-    background-image: url(images/Screenshot\ \(10\).png);
+    background-image: url(images/star_PNG41530.png);
     float: right;
     background-position: center;
     margin-top: 300px;
